cabal-version:       >= 1.24
name:                publish
version:             0.1.1
synopsis:            Publishing tools for papers, books, and presentations
license:             BSD3
license-file:        LICENCE
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2016-2018 Operational Dynamics Consulting Pty Ltd, and Others
category:            Text
tested-with:         GHC == 8.0

build-type:          Simple

 
executable           render
  default-language:  Haskell2010

  build-depends:     base,
                     pandoc-types,
                     pandoc

  ghc-options:       -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  hs-source-dirs:    src
  main-is:           RenderDocument.hs
                      
 
executable           poemtabs
  default-language:  Haskell2010

  build-depends:     base,
                     pandoc-types,
                     pandoc

  ghc-options:       -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  hs-source-dirs:    src
  main-is:           PoemTabs.hs
                      
-- vim: set tabstop=21 expandtab:
